tests/compile_fail/invalid_content_item_list_empty_literal.rs
use surgeist_style::ContentItemList;

fn main() {
    let _items = ContentItemList { items: Vec::new() };
}
